# haskell-to-idris

./: haskell-to-idris.cabal
Haskell/: Conversion.hs  Main.hs
Haskell/Idris/: Types.hs
