name: haskell-to-idris
version: 1.0
cabal-version: >= 1.12
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012 Irene Knapp
author: Irene Knapp <irene.knapp@icloud.com>
maintainer: irene.knapp@icloud.com
homepage: http://ireneknapp.com/software/
bug-reports: https://github.com/IreneKnapp/haskell-to-idris/issues
category: Language
synopsis: Novel database implementation based on Modern Data
description:

Source-Repository head
  type: git
  location: git@github.com:IreneKnapp/haskell-to-idris.git

Executable haskell-to-idris
  hs-source-dirs: Haskell
  main-is: Main.hs
  build-depends: base >= 4.1 && < 5,
                 haskell-src-exts >= 1.13.5 && < 2
  default-language: Haskell2010

